@@ -8,9 +8,14 @@
     Version 2.9.0 Last updated 2006-07-06<br>
  
 <ul>
-   <li><a href="pygtk2reference/index.html">Reference Manual</a></li>
-   <li><a href="dist/reference-tarballs">Reference Manual Tarballs</a><br>
+   <li><a href="docs/pygobject/index.html">PyGObject Reference Manual</a></li>
+   <li><a href="docs/pygtk/index.html">PyGTK Reference Manual</a></li>
 </ul>
+
+The PyGObject and PyGTK reference manual is now included in the source tarballs, which
+you can find here: 
+<a href="http://ftp.gnome.org/pub/GNOME/sources/pygobject/2.10/">PyGObject</a> and 
+<a href="http://ftp.gnome.org/pub/GNOME/sources/pygtk/2.10/">PyGTK</a>.
 
 <h2>GnomePythonExtras Reference Manual</h2>
         
