@@ -1,5 +1,9 @@
 2006-09-04  Johan Dahlin  <jdahlin@async.com.br>
 
+	* Makefile (LOCAL_TARBALLS): Download reference tarballs from gnome.org,
+	reorganize the layout docs/pygobject and docs/pygtk are new reference
+	manual locations.
+
 	* newsitems.py (item): PyGObject 2.12.0 and PyGTK 2.10.0
 
 2006-08-28  Rafael Villar Burke  <pachi@rvburke.com>
